Выполнена адаптивная вёрстка

--- a/index.html
+++ b/index.html
@@ -20,10 +20,18 @@
           </div>
           <nav class="menu">
             <ul class="menu__items">
-              <li class="menu__item"><a href="#" class="menu__link menu__link--current">Главная</a></li>
-              <li class="menu__item"><a href="#" class="menu__link">Информация</a></li>
-              <li class="menu__item"><a href="#" class="menu__link">Новости</a></li>
-              <li class="menu__item"><a href="#" class="menu__link">Контакты</a></li>
+              <li class="menu__item">
+                <a href="#" class="menu__link menu__link--current">Главная</a>
+              </li>
+              <li class="menu__item">
+                <a href="#" class="menu__link">Информация</a>
+              </li>
+              <li class="menu__item">
+                <a href="#" class="menu__link">Новости</a>
+              </li>
+              <li class="menu__item">
+                <a href="#" class="menu__link">Контакты</a>
+              </li>
             </ul>
           </nav>
         </div>
