--- a/index.html
+++ b/index.html
@@ -157,6 +157,56 @@
           </div>
         </form>
       </footer>
+      <section class="faq">
+        <h2 class="faq__title">FAQ</h2>
+        <dl id="faq" class="faq__items">
+          <dt>
+            <button type="button" class="faq__question">
+              Название вопроса 1
+              <svg class="faq__arrow" height="24" width="24"><use xlink:href="arrow-up.svg#arrow-ico"></use></svg>
+            </button>
+          </dt>
+          <dd class="faq__answer">
+            <p class="faq__answer-inner">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+              ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+              fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+              mollit anim id est laborum.
+            </p>
+          </dd>
+          <dt>
+            <button type="button" class="faq__question">
+              Название вопроса 2
+              <svg class="faq__arrow" height="24" width="24"><use xlink:href="arrow-up.svg#arrow-ico"></use></svg>
+            </button>
+          </dt>
+          <dd class="faq__answer">
+            <p class="faq__answer-inner">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+              ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+              fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+              mollit anim id est laborum.
+            </p>
+          </dd>
+          <dt>
+            <button type="button" class="faq__question">
+              Название вопроса 3
+              <svg class="faq__arrow" height="24" width="24"><use xlink:href="arrow-up.svg#arrow-ico"></use></svg>
+            </button>
+          </dt>
+          <dd class="faq__answer">
+            <p class="faq__answer-inner">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+              ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+              fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+              mollit anim id est laborum.
+            </p>
+          </dd>
+        </dl>
+      </section>
     </section>
 
     <footer class="footer">
